// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse Component Does not render LeftIcon when prop is undefined 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 "
>
  <div
    class="w-full"
  >
    My Collapse
  </div>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`Collapse Component Renders a collapse component 1`] = `
<div>
  <div
    class="w-100 collapse "
    tabindex="0"
  >
    <div
      class="collapse-title cursor-pointer flex items-center justify-center px-4 "
    >
      <div
        class="w-full"
      >
        My Collapse
      </div>
      <div
        class="items-end transition ease-in-out -rotate-90"
      >
        <svg
          aria-hidden="true"
          class="w-4 h-4"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0"
      style="height: 0px;"
    >
      <p
        class="test-element"
      >
        Hi everyone
      </p>
    </div>
  </div>
</div>
`;

exports[`Collapse Component Renders an expanded collapse component when defaultExpand is true 1`] = `
<div>
  <div
    class="w-100 collapse "
    tabindex="0"
  >
    <div
      class="collapse-title cursor-pointer flex items-center justify-center px-4 "
    >
      <div
        class="w-full"
      >
        My Collapse
      </div>
      <div
        class="items-end transition ease-in-out "
      >
        <svg
          aria-hidden="true"
          class="w-4 h-4"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden "
      style="height: 30px;"
    >
      <p
        class="test-element"
      >
        Hi everyone
      </p>
    </div>
  </div>
</div>
`;

exports[`Collapse Component Respects className prop 1`] = `
<div
  class="w-100 collapse my-class-name"
  tabindex="0"
>
  <div
    class="collapse-title cursor-pointer flex items-center justify-center px-4 "
  >
    <div
      class="w-full"
    >
      My Collapse
    </div>
    <div
      class="items-end transition ease-in-out -rotate-90"
    >
      <svg
        aria-hidden="true"
        class="w-4 h-4"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="collapse-body ease-linear duration-[.25s] transition-[height] overflow-hidden h-0"
    style="height: 0px;"
  >
    <p
      class="test-element"
    >
      Hi everyone
    </p>
  </div>
</div>
`;

exports[`Collapse Component Respects headerClasses prop 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 some-header-class another-header-class"
>
  <div
    class="w-full"
  >
    My Collapse
  </div>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`Collapse Component Respects leftIcon prop 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 "
>
  <svg
    aria-hidden="true"
    class="w-6 h-6 mr-3"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11.47 3.84a.75.75 0 011.06 0l8.69 8.69a.75.75 0 101.06-1.06l-8.689-8.69a2.25 2.25 0 00-3.182 0l-8.69 8.69a.75.75 0 001.061 1.06l8.69-8.69z"
    />
    <path
      d="M12 5.432l8.159 8.159c.03.03.06.058.091.086v6.198c0 1.035-.84 1.875-1.875 1.875H15a.75.75 0 01-.75-.75v-4.5a.75.75 0 00-.75-.75h-3a.75.75 0 00-.75.75V21a.75.75 0 01-.75.75H5.625a1.875 1.875 0 01-1.875-1.875v-6.198a2.29 2.29 0 00.091-.086L12 5.43z"
    />
  </svg>
  <div
    class="w-full"
  >
    My Collapse
  </div>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`Collapse Component Respects leftIconClasses arg 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 "
>
  <svg
    aria-hidden="true"
    class="some-icon-class"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11.47 3.84a.75.75 0 011.06 0l8.69 8.69a.75.75 0 101.06-1.06l-8.689-8.69a2.25 2.25 0 00-3.182 0l-8.69 8.69a.75.75 0 001.061 1.06l8.69-8.69z"
    />
    <path
      d="M12 5.432l8.159 8.159c.03.03.06.058.091.086v6.198c0 1.035-.84 1.875-1.875 1.875H15a.75.75 0 01-.75-.75v-4.5a.75.75 0 00-.75-.75h-3a.75.75 0 00-.75.75V21a.75.75 0 01-.75.75H5.625a1.875 1.875 0 01-1.875-1.875v-6.198a2.29 2.29 0 00.091-.086L12 5.43z"
    />
  </svg>
  <div
    class="w-full"
  >
    My Collapse
  </div>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="w-4 h-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`Collapse Component Respects rightIconClasses arg 1`] = `
<div
  class="collapse-title cursor-pointer flex items-center justify-center px-4 "
>
  <div
    class="w-full"
  >
    My Collapse
  </div>
  <div
    class="items-end transition ease-in-out -rotate-90"
  >
    <svg
      aria-hidden="true"
      class="some-icon-class"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</div>
`;
